// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalHeader to match snapshot [default] 1`] = `
<DocumentFragment>
  <div
    class="modal-header border-bottom-0 justify-content-center pb-0 px-4 pt-4"
  >
    <div
      class="modal-title font-weight-bold colored"
      id="modal-label"
    >
      Title
    </div>
    <button
      aria-label="Close"
      class="close m-0 p-0"
      data-dismiss="modal"
      type="button"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 25 25"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 22.5L14.8 12.4l10.1-9.9L22.7.4l-10 10L2.2 0 .1 2.1l10.5 10.3L0 22.9 2.1 25l10.6-10.5 10.2 10.1z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ModalHeader to match snapshot [hide close icon] 1`] = `
<DocumentFragment>
  <div
    class="modal-header border-bottom-0 justify-content-center pb-0 px-4 pt-4"
  >
    <div
      class="modal-title font-weight-bold colored"
      id="modal-label"
    >
      Title
    </div>
  </div>
</DocumentFragment>
`;
